# serializer version: 1
# name: test_list_accounts_no_prompt
  '''
  Type       ID
  ---------  ------------
  MYRENAULT  account-id-1
  SFDC       account-id-2
  
  '''
# ---
# name: test_list_accounts_prompt
  '''
  Please select a locale [fr_CA]: fr_FR
  Do you want to save the locale to the credential store? [y/N]: N
  
  User: test@example.com
  Password: 
  
  Type       ID
  ---------  ------------
  MYRENAULT  account-id-1
  SFDC       account-id-2
  
  '''
# ---
# name: test_login_no_prompt
  ''
# ---
# name: test_login_prompt
  '''
  User: test@example.com
  Password: 
  Please select a locale [fr_CA]: fr_FR
  Do you want to save the locale to the credential store? [y/N]: y
  
  
  '''
# ---
